libxfont (1:1.4.3-1) UNRELEASED; urgency=low

  * New upstream release.
  * Bump xutils-dev build-dep for new macros.
  * Add xmlto, xorg-sgml-doctools, and w3m build-dep for the doc.
  * Pass --with-xmlto and --without-fop for the regular build (we want
    html and txt only). Disable both for the udeb build.

 -- Cyril Brulebois <kibi@debian.org>  Sat, 06 Nov 2010 15:05:02 +0100

libxfont (1:1.4.2-1) experimental; urgency=low

  * New upstream release.
  * Bump xutils-dev build-dep for new xorg-macros.
  * Bump shlibs for register_fpe_functions().
  * Update debian/copyright.
  * Bump Standards-Version to 3.9.0, no changes.

 -- Julien Cristau <jcristau@debian.org>  Wed, 07 Jul 2010 18:25:15 +0100

libxfont (1:1.4.1-2) unstable; urgency=low

  [ Julien Cristau ]
  * Rename the build directory to not include DEB_BUILD_GNU_TYPE for no
    good reason.  Thanks, Colin Watson!
  * Remove myself from Uploaders

  [ Cyril Brulebois ]
  * Use dh_makeshlibs’s -V argument instead of debian/libxfont1.shlibs
  * Add udeb needed for the graphical installer: libxfont1-udeb.
  * Version the B-D on libfontenc-dev to ensure libxfont1-udeb gets a
    dependency on libfontenc1-udeb.
  * Use a bzip2-less flavour for the udeb.
  * Bump Standards-Version from 3.8.3 to 3.8.4 (no changes needed).
  * Fix obsolete-relation-form-in-source by using “<<” instead of “<” for
    xprint in Conflicts, thanks to lintian.
  * Add myself to Uploaders.

 -- Cyril Brulebois <kibi@debian.org>  Wed, 10 Mar 2010 20:05:31 +0100

libxfont (1:1.4.1-1) unstable; urgency=low

  * New upstream release.
  * Bump xutils-dev build-dep for new util-macros.
  * Build documentation, install it in libxfont-dev.
  * Enable support for bzip2 compressed bitmap fonts.
  * Don't use LDFLAGS from the environment.  Ubuntu sets that to
    -Bsymbolic-functions, which breaks libXfont's weak symbols usage.

 -- Julien Cristau <jcristau@debian.org>  Wed, 02 Dec 2009 11:12:13 +0100

libxfont (1:1.4.0-3) unstable; urgency=low
